--- a/blogModule/web/statics/css/hearder.css
+++ b/blogModule/web/statics/css/hearder.css
@@ -7,12 +7,11 @@ body{
 	width: 100%;
 	
 }
-
 #top-navbar{
 	width:100%;
 	height: 75px;
 	margin:auto;
-	background: linear-gradient(gray,white);
+	
 	position: relative;
 }
 
@@ -50,6 +49,9 @@ body{
 	dominant-baseline: no-change;
 	text-decoration: none;
 }
+.top-searchbox{
+	float: left;
+}
 
 .top-search{
 	margin-top: 25px;
@@ -57,3 +59,54 @@ body{
 	text-indent: 1em;
 	border-radius: 10px;
 }
+
+.top-writeblog{
+	margin-left: 10%;
+	margin-top: 25px;
+	float: left;
+	width: 32px;
+	height: 32px;
+	background: url(../themes/black/images/messager_icons.png);
+}
+
+.top-writeblog-text{
+	text-decoration: none;
+	line-height: 75px;
+	font-family: "黑体";
+	font-size: x-large;
+}
+
+.top-nologin{
+	float:right;
+	margin-right: 10%;
+	margin-top: 25px;
+}
+
+.top-nologin a{
+	margin-right: 10px;
+	text-decoration: none;
+}
+
+.top-login{
+	float: right;
+	margin-right: 10%;
+	margin-top: 10px;
+}
+
+.top-login-img{
+	border-radius: 50%;
+	overflow: hidden;
+	width: 50px;
+	height: 50px;
+}
+
+.top-login div{
+	float: left;
+}
+.top-login div:nth-of-type(2){
+	margin-left: 10px;
+	margin-top: 15px;
+}
+
+
+
